fix alignment on home page

--- a/themes/lazy/assets/css/lazy.scss
+++ b/themes/lazy/assets/css/lazy.scss
@@ -134,6 +134,7 @@ $bottom-space: 26px;
   margin-bottom: 0.5em;
   font-size: 2rem;
   line-height: 1.2;
+  word-break: break-word;
 }
 
 .post-teaser__content .publish-time {
